--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   geolocator: ^12.0.0
   provider: ^6.1.2
   image: ^4.2.0
+  youtube_player_flutter: ^9.0.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
